welcome.lessons.welcome.array.island.Island.scala.error
island:2: error: not found: value compteur
  compteur niveau = 0
  ^island:5: error: not found: value compteur
      compteur=compteur+1
      ^island:8: error: not found: value compteur
  return compteur
         ^