welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  compteur niveau = 0
  for (i<-0 to num.length-2){
    if (num(i)<num(i+1)){
      compteur=compteur+1
    }
  }
  return compteur
}